@@ -39,6 +39,12 @@
             <artifactId>ormlite-jdbc</artifactId>
             <version>6.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
 
 
     </dependencies>
@@ -48,8 +54,8 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>15</source>
-                    <target>15</target>
+                    <source>18</source>
+                    <target>18</target>
                 </configuration>
             </plugin>
 	    <plugin>
@@ -64,7 +70,13 @@
                 </execution>
             </executions>
             <configuration>
-                <mainClass>Main</mainClass>
+                <mainClass>GUI.Main</mainClass>
+                <arguments>
+                    <argument>--module-path</argument>
+                    <argument>C:\PatrickSimetzberger\projects\LogicMaster\out</argument>
+                    <argument>--add-modules</argument>
+                    <argument>javafx.controls,javafx.fxml</argument>
+                </arguments>
             </configuration>
         </plugin>
         </plugins>
